--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -102,7 +102,6 @@ store_artifacts:
   - echo "$KI" >/tmp/ki  &&  chmod 400 /tmp/ki
   - export GIT_SSH_COMMAND="ssh -i/tmp/ki -oStrictHostKeyChecking=no"
   - SSH_URL=$(echo "$CI_REPOSITORY_URL" | perl -pe 's#https://(.+?):(.+?)@(.+?)/(.+?).git#git@\3:\4.git#' )
-  - DEBUG echo XXXXXXXXXX
   ## ---------- CLONE, ADD and COMMIT ---------------
   - git clone "$SSH_URL" --depth 1 --single-branch -b artifacts/$CI_COMMIT_REF_NAME ./artifacts  ||  { git init artifacts && git -C artifacts checkout --orphan artifacts/$CI_COMMIT_REF_NAME; }
   - echo >README.md.new  "## byte_vector $REV_LABEL"
@@ -112,11 +111,11 @@ store_artifacts:
   - cat  >>README.md.new artifacts/README.md  || true
   - mv     README.md.new artifacts/README.md
   - cd artifacts
+  - ln -sf byte_vector-$REV_LABEL.hh byte_vector.hh
   - git add .
   - DEBUG git status 
   - git config --global user.email "ci@byte_vector.c++"
   - git config --global user.name "byte_vector GitLab CI"
-  - DEBUG echo YYYYYYYYYYYY
   - git commit -m"$REV_LABEL
     
     $(cat commit_message)
