--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -17,7 +17,7 @@ add_executable(test-byte_vector
     test-byte_range_ascii.cpp
     test-byte_range_hex.cpp
     test-byte_vector.cpp
-    test-byte_range_view.cpp
+    test-byte_range.cpp
     )
 target_compile_features(test-byte_vector PRIVATE cxx_std_17)
 target_link_libraries(test-byte_vector PRIVATE 
